Fill dropdowns in the feed form

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,3 +29,12 @@
 
 en:
   hello: "Hello world"
+  
+  loaders:
+    http: "HTTP"
+  
+  processors:
+    rss: "RSS/XML"
+  
+  normalizers:
+    rss: "RSS"
