--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,16 +29,7 @@
 
 en:
   hello: "Hello world"
-  
-  loaders:
-    http: "HTTP"
-  
-  processors:
-    rss: "RSS/XML"
-  
-  normalizers:
-    rss: "RSS"
-    xkcd: "XKCD"
 
   feed_profiles:
-    rss: "RSS Feed Profile"
+    rss: "RSS Feed"
+    xkcd: "XKCD Comics"
