Add feed name links to event descriptions (#257)
* Add i18n templates for event descriptions

- Add event_descriptions section to en.yml
- Include templates for all event types
- Support pluralization for multi-feed events
- Use interpolation variables for feed links

* Create EventDescriptionRenderer service

- Generate HTML descriptions with feed links
- Support single and multiple feed references
- Extract feeds from subject or metadata
- Use i18n templates with interpolation
- Return safe HTML output

* Update RecentEventsComponent to use renderer

- Replace plain message with EventDescriptionRenderer
- Remove unused fallback_message method
- Enable HTML feed links in event descriptions

* Update AccessToken event to use metadata only

- Remove hardcoded message from event creation
- Store disabled_count in metadata
- Let EventDescriptionRenderer generate description

* Update FeedRefreshWorkflow events to use metadata

- Remove hardcoded messages from event creation
- Store error_message in metadata for renderer
- Let EventDescriptionRenderer generate descriptions

* Update email_changed event to use metadata only

- Remove hardcoded message from event creation
- Let EventDescriptionRenderer generate description

* Add tests for EventDescriptionRenderer

- Test single feed link generation
- Test multiple feed links from metadata
- Test error message inclusion
- Test HTML escaping in fallback messages
- Test html_safe output
- Test graceful handling of missing feeds

* Update admin event views to use renderer

- Replace plain message with EventDescriptionRenderer
- Enable HTML feed links in admin event index
- Enable HTML feed links in admin event show
- Always show description (remove conditional)

* Fix EventDescriptionRenderer URL helpers

- Add default_url_options method for URL helpers
- Fix pluralization for events without feeds
- Default to count: 1 for non-feed events

* Update tests to use EventDescriptionRenderer

- Replace event.message checks with re

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,10 +31,54 @@ en:
   hello: "Hello world"
 
   events:
-    types:
-      feed_refresh: "Feed refreshed"
-      feed_refresh_error: "Feed refresh failed"
-      post_withdrawn: "Post withdrawn"
+    feed_refresh:
+      name: "Feed refreshed"
+      description_html: "Feed %{subject_link} refreshed successfully"
+    feed_refresh_error:
+      name: "Feed refresh failed"
+      description_html: "Feed %{subject_link} refresh failed at %{stage}: %{message}"
+    post_withdrawn:
+      name: "Post withdrawn"
+      description_html: "Post withdrawn from FreeFeed"
+    access_token_validation_failed:
+      name: "Token validation failed"
+      description_html: "Token validation failed. Feeds disabled: %{feed_links}"
+    group_purge_started:
+      name: "Feed purge started"
+      description_html: "Feed %{subject_link} purge started"
+    email_changed:
+      name: "Email changed"
+      description_html: "Email address changed"
+    user_suspended:
+      name: "User suspended"
+      description_html: "Account suspended"
+    user_unsuspended:
+      name: "User unsuspended"
+      description_html: "Account unsuspended"
+    resend_email_sent:
+      name: "Email sent"
+      description_html: "Email sent"
+    resend_email_delivered:
+      name: "Email delivered"
+      description_html: "Email delivered"
+    resend_email_delayed:
+      name: "Email delayed"
+      description_html: "Email delivery delayed"
+    resend_email_opened:
+      name: "Email opened"
+      description_html: "Email opened"
+    resend_email_clicked:
+      name: "Email clicked"
+      description_html: "Email link clicked"
+    resend_email_bounced:
+      name: "Email bounced"
+      description_html: "Email bounced"
+    resend_email_complained:
+      name: "Spam complaint"
+      description_html: "Spam complaint received"
+    resend_email_failed:
+      name: "Email failed"
+      description_html: "Email delivery failed"
 
   feed_profiles:
     rss: "RSS Feed"
